--- a/Finding basis-Copy1.ipynb
+++ b/Finding basis-Copy1.ipynb
@@ -34,6 +34,7 @@
     "    return GF(2)(vec[0]*vec[4]+vec[1]*vec[5]+vec[2]*vec[6]+vec[3]*vec[7]);\n",
     "\n",
     "V=GF(2)^8;\n",
+    "even = [v  for v in V if logestar(v) ==0];\n",
     "\n",
     "prec = 1994; #precision and bound should be changed accordingly\n",
     "CC = ComplexField(1994);\n",
@@ -43,7 +44,7 @@
     "RT=RiemannTheta(tau);\n",
     "\n",
     "\n",
-    "vanishing = [v for v in vanishing if abs(RT(char=v)) <= 10^-600];\n",
+    "vanishing = [v for v in even if abs(RT(char=v)) <= 10^(-prec/3)];\n",
     "save(vanishing, \"vanishingcase1\")\n",
     "\n",
     "\n",
