--- a/rampoints-Copy1.ipynb
+++ b/rampoints-Copy1.ipynb
@@ -41,7 +41,7 @@
     "prec = 1330;\n",
     "CC = ComplexField(1330);\n",
     "\n",
-    "##insert your period matrix here"
+    "##insert your period matrix here \n"
     "\n",
     "tau = \n"
     "\n",
