--- a/rampoints-Copy1.ipynb
+++ b/rampoints-Copy1.ipynb
@@ -27,21 +27,21 @@
    ],
    "source": [
     "B = load(\"largeramlist.sobj\");\n",
-    "N = load(\"vanishingcase1.sobj\")\n",
+    "##N = load(\"vanishingcase1.sobj\")\n",
     "[b3,b4,b5,b6,b7,b8,b9] = B[0];\n",
-    "print(b3[0] in N, b3[1] in N, b3[2] in N, b3[3] in N);\n",
-    "print(b4[0] in N, b4[1] in N, b4[2] in N, b4[3] in N);\n",
-    "print(b5[0] in N, b5[1] in N, b5[2] in N, b5[3] in N);\n",
-    "print(b6[0] in N, b6[1] in N, b6[2] in N, b6[3] in N);\n",
-    "print(b7[0] in N, b7[1] in N, b7[2] in N, b7[3] in N);\n",
-    "print(b8[0] in N, b8[1] in N, b8[2] in N, b8[3] in N);\n",
-    "print(b9[0] in N, b9[1] in N, b9[2] in N, b9[3] in N);\n",
+    "##print(b3[0] in N, b3[1] in N, b3[2] in N, b3[3] in N);\n",
+    "##print(b4[0] in N, b4[1] in N, b4[2] in N, b4[3] in N);\n",
+    "##print(b5[0] in N, b5[1] in N, b5[2] in N, b5[3] in N);\n",
+    "##print(b6[0] in N, b6[1] in N, b6[2] in N, b6[3] in N);\n",
+    "##print(b7[0] in N, b7[1] in N, b7[2] in N, b7[3] in N);\n",
+    "##print(b8[0] in N, b8[1] in N, b8[2] in N, b8[3] in N);\n",
+    "##print(b9[0] in N, b9[1] in N, b9[2] in N, b9[3] in N);\n",
     "\n",
     "from riemann_theta.riemann_theta import RiemannTheta\n",
     "prec = 1330;\n",
     "CC = ComplexField(1330);\n",
     "\n",
-    "##insert your period matrix here \n"
+    "##insert your period matrix here \n",
     "\n",
     "tau = \n"
     "\n",
