--- a/rampoints-Copy1.ipynb
+++ b/rampoints-Copy1.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "##insert your period matrix here \n",
     "\n",
-    "tau = \n"
+    "tau = \n",
     "\n",
     "RT=RiemannTheta(tau);\n",
     "\n",
