--- a/Schottkyformcode.ipynb
+++ b/Schottkyformcode.ipynb
@@ -89,7 +89,7 @@
     "end if;\n",
     "#twistingunit;\n",
     "\n",
-    "/*Weil type generator revamped*/\n",
+    "/*Weil type polarizations generator revamped, we will generate all possible Weil type polarizations*/\n",
     "\n",
     "RePla := RealPlaces(R);\n",
     "\n",
